--- a/public/views/partials/header.pug
+++ b/public/views/partials/header.pug
@@ -2,6 +2,8 @@ header.logo-wrapper.desktop
   h1.flat-link.logo
     a(href="/") 
         span Global Contemporary Art Tours Group, Inc.
+  .divider
 header.logo-wrapper.mobile 
   h1.flat-link.logo
     a(href="/") Global Contemporary Art Tours Group, Inc.
+  .divider
