--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -2,6 +2,8 @@
 @import url('skeleton/skeleton.css');
 @import url('./typography.css');
 @import url('grid.css');
+@import url('images.css');
+@import url('widgets.css');
 
 /* Primary colors
  black: #000
@@ -16,6 +18,52 @@
 body{
   margin: 0;
 }
+#pageLeaf::before{
+  content: '';
+  -webkit-transform: translateX(-400vw);
+  transform: translateX(-400vw);
+  height: 100vh;
+  width: 400vw;
+  position: fixed;
+  background: #F2E502;
+  z-index: 90000;
+  top: 0;
+  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, #fff 5%, #fff 40%, rgba(255,255,255,0) 45%);
+  opacity: 1;
+  transition: 0s;
+}
+
+#pageLeaf::after{
+  content: '';
+  -webkit-transform: translateX(400vw);
+  transform: translateX(400vw);
+  height: 100vh;
+  width: 400vw;
+  position: fixed;
+  background: #F2E502;
+  z-index: 90000;
+  top: 0;
+  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, #fff 5%, #fff 40%, rgba(255,255,255,0) 45%);
+  opacity: 1;
+  transition: 0s;
+}
+
+
+.slide-finish::after {
+    -webkit-transform: translateX(-400vw);
+    transform: translateX(-400vw);
+    opacity: 1;
+}
+.slide-start::after {
+    -webkit-transform: translateX(-25vw);
+    transform: translateX(-25vw);
+    transition: -webkit-transform 1s ease-in;
+    transition: transform 1s ease-in;
+    transition: transform 1s ease-in, -webkit-transform 1s ease-in;
+    opacity: 1;
+}
+
+
 
 a{
   color: inherit;
@@ -79,4 +127,35 @@ footer{
 
 footer marquee{
   padding: 23px 0;
+}
+
+
+.poster-text{
+
+  position: relative;
+  z-index: -1;
+  box-shadow: inset 1px 2px 6px 0 #b2b2b2;
+  background-image: linear-gradient(to bottom, #ffffff 30%, #ff00ff);
+}
+
+.top-offset{
+  padding-top: 12em;
+  top: -10em;
+}
+
+.left-offset{
+  padding-top: 15em;
+  padding-left: 2em;
+  top: -16em;
+  left: 4em;
+  width: 15em;
+
+}
+
+.right-offset{
+  padding: 14em 2em .7em .5em;
+  top: -12em;
+  right: 1em;
+  width: 23em;
+
 }
