--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -9,12 +9,14 @@ html
     meta(name='og:image', content="")
     meta(name='og:description', content="Your Flight Is Cancelled is a new e-flux project conceived by Julieta Aranda and Anton Vidokle.")
 
-    link(rel='shortcut icon', href='./images/favicon.png', type='image/x-icon') 
+    link(rel='shortcut icon', href='./images/Symbols/Place selection.png', type='image/x-icon') 
     link(rel='stylesheet', href='./styles/main.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     title Global Art Tours
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js')
+  
   body
+    html#pageLeaf
     include partials/header.pug
     include partials/nav.pug
     include widgets/flightSelection.pug
