--- a/public/assets/styles/widgets.css
+++ b/public/assets/styles/widgets.css
@@ -10,3 +10,12 @@ form#booking{
   color: #000;
   background-image: linear-gradient(to bottom, #ffffff, #d8d8d8);
 }
+
+
+.carousel-thumb{
+    pointer: cursor;
+}
+
+.carousel-thumb:hover{
+    box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19); 
+}
