--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -31,6 +31,8 @@ html
         include subPages/destinations.pug
         include subPages/vacations.pug
         include subPages/offers.pug
+        include widgets/flight-scan-carousel.pug
+    //- include widgets/flightNoise.pug
     include partials/footer.pug
     
 
