--- a/public/views/partials/footer.pug
+++ b/public/views/partials/footer.pug
@@ -14,5 +14,5 @@ footer
   
       wavesurfer.load('./audio/soundplane.mp3');
       wavesurfer.on('ready', function(){
-          wavesurfer.play(); 
+          //- wavesurfer.play(); 
       });
