--- a/public/views/partials/header.pug
+++ b/public/views/partials/header.pug
@@ -1,9 +1,12 @@
 header.logo-wrapper.desktop 
-  h1.flat-link.logo
     a(href="/") 
-        span Global Contemporary Art Tours Group, Inc.
-  .divider
+        img(src="./icons/GCATG-Blue Circles.svg")
+            //- h1.flat-link.logo
+                //- span Global Contemporary Art Tours Group, Inc.
+    .divider
 header.logo-wrapper.mobile 
-  h1.flat-link.logo
-    a(href="/") Global Contemporary Art Tours Group, Inc.
-  .divider
+    a(href="/") 
+        img(src="./icons/GCATG-Blue Circles.svg")
+    //- h1.flat-link.logo
+    //- Global Contemporary Art Tours Group, Inc.
+    .divider
