--- a/public/views/partials/nav.pug
+++ b/public/views/partials/nav.pug
@@ -25,6 +25,6 @@ nav.fade-in-fast
   
   .tab-group
     div.tab-container
-      span.menu-item Travel Loss
+        a.tablink.menu-item#about-tab(href="#about" data-value="about") About Us
 span.navDot(onclick='toggleNav()')
 //- script(type='text/javascript', src='/scripts/nav.js')
