--- a/public/views/subPages/offers.pug
+++ b/public/views/subPages/offers.pug
@@ -1,5 +1,4 @@
 div.tabcontent#offers-page
-  .row
-    .main-text.column
-      .title.mobile Deals & Offers
-      p Offers
+  .main-text.column
+    .title.mobile Deals & Offers
+  iframe(src="http://www.flightradar24.com/simple_index.php?lat=50.8503&lon=4.3517&z=8" width="70%" height="600")
