--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -4,6 +4,7 @@
 @import url('grid.css');
 @import url('images.css');
 @import url('widgets.css');
+@import url('modal.css');
 
 /* Primary colors
  black: #000
@@ -91,7 +92,7 @@ a:hover{
   width: 10em;
   height: 10em;
   border-radius: 5em;
-  background-image: url("/images/stars-14613.png");
+  background-image: url("/images/Symbols/stars.png");
 }
 .bar{
   width: 26em;
