--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -5,6 +5,7 @@
 @import url('images.css');
 @import url('widgets.css');
 @import url('modal.css');
+@import url('project.css');
 
 /* Primary colors
  black: #000
