--- a/public/views/partials/nav.pug
+++ b/public/views/partials/nav.pug
@@ -13,15 +13,15 @@ nav.fade-in-fast
     div.tab-container
       a.tablink.menu-item#offers-tab(href="#offers" data-value="offers") Deals & Offers
     div.tab-container
-      span.menu-item Extra Services 
+      a.tablink.menu-item#service-tab(href="#service" data-value="service") Extra Services 
     
   .tab-group 
     div.tab-container
-      span.menu-item Partners
+      a.tablink.menu-item#partners-tab(href="#partners" data-value="partners") Partners
     div.tab-container
-      span.menu-item Terms of Privacy
+      a.tablink.menu-item#privacy-tab(href="#privacy" data-value="privacy") Terms of Privacy
     div.tab-container
-      span.menu-item Passport FAQ
+      a.tablink.menu-item#faq-tab(href="#faq" data-value="faq") Passport FAQ
   
   .tab-group
     div.tab-container
