--- a/public/views/subPages/offers.pug
+++ b/public/views/subPages/offers.pug
@@ -2,3 +2,4 @@ div.tabcontent#offers-page
   .main-text.column
     .title.mobile Deals & Offers
   iframe(src="http://www.flightradar24.com/simple_index.php?lat=50.8503&lon=4.3517&z=8" width="70%" height="600")
+  iframe(width="720" height="480" src="https://www.youtube.com/embed/bQQK0iR5iBU")
