--- a/public/assets/styles/nav.css
+++ b/public/assets/styles/nav.css
@@ -13,7 +13,7 @@ body.fixed{
 
 .tab-container.open{
   /* background-image: linear-gradient(to bottom, #ffffff, #feff01); */
-  background: #fff; 
+  background: #fff;
 }
 
 .highlight{
@@ -49,13 +49,16 @@ span.menu-item{
 }
 nav {
   box-sizing: border-box;
-  width: calc(100% - 60px);
-  text-align: center;
-  font-size: 40px;
+  text-align: right;
+  font-size: 14px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.1s ease;
   padding: 0px 30px 8px 30px;
-  margin: 0 30px;
+  margin-left: 200px;
+  box-sizing: border-box;
+  width: calc(100% - 200px);
+  text-align: right;
+  font-size: 14px;
 }
 
 nav.sticky {
