--- a/public/assets/styles/typography.css
+++ b/public/assets/styles/typography.css
@@ -29,6 +29,19 @@
   font-weight: normal;
   font-style: normal;
 }
+/* -----------  */
+@font-face {
+  font-family: 'AcuminPro-Regular';
+      src:  url('../fonts/AcuminPro-Regular/AcuminPro-Regular.eot');
+     src:  url('../fonts/AcuminPro-Regular/AcuminPro-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/AcuminPro-Regular/AcuminPro-Regular.woff') format('woff'),
+        url('../fonts/AcuminPro-Regular/AcuminPro-Regular.ttf')  format('truetype'),
+        url('../fonts/AcuminPro-Regular/AcuminPro-Regular.svg#AcuminPro-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 
 
 .logo{
@@ -59,7 +72,7 @@
 }
 
 .title, .menu-item{
-  font-family: 'DINPro-Regular';
+  font-family: 'AcuminPro-Regular';
   font-size: 12px;
   text-transform: uppercase;
   line-height: initial;
@@ -75,20 +88,20 @@ header{
 
 /* subheader */
 .subheader{
-  font-family: 'DINPro-Regular';
+  font-family: 'AcuminPro-Regular';
   font-size: 18px;
   line-height: 23px;
 }
 
 body{
-  font-family: 'DINPro-Regular';
+  font-family: 'AcuminPro-Regular';
   font-size: 18px;
   line-height: 23px;
 }
 
 @media (min-width: 320px) and (max-width: 767px){
   body{
-    font-family: 'DINPro-Regular';
+    font-family: 'AcuminPro-Regular';
     font-size: 15px;
     line-height: 20px;
   }
@@ -96,24 +109,29 @@ body{
 }
 
 p{
-    font-family: 'DINPro-Regular';
+    font-family: 'AcuminPro-Regular';
     font-size: 15px;
     line-height: 20px;
 }
 p.block{
-  font-family: 'DINPro-Regular';
+  font-family: 'AcuminPro-Regular';
   font-size: 12px;
   line-height: 17px;
 }
 .main-text p{
-    font-family: 'DINPro-Regular';
+    font-family: 'AcuminPro-Regular';
     font-size: 18px;
     line-height: 24px;
     letter-spacing: .5px;
 
 }
 caption, footer, .error-message{
-  font-family: 'DINPro-Regular';
+  font-family: 'AcuminPro-Regular';
   font-size: 14px;
   line-height: 17px;
+}
+
+form{
+  font-family: 'AcuminPro-Regular';
+  font-size: 12px;
 }
