--- a/public/views/projects/index.pug
+++ b/public/views/projects/index.pug
@@ -16,13 +16,16 @@ html
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js')
   
   body#projectPage
-    include ../partials/header.pug
     include ../partials/nav.pug
     .row
       //- .backDrop
       //-   img(src=visuals[0])
       //-   .backDropBlur(style="")
+      #scatterPlot
+        each url in visuals
+          img(src=url)
       #backDrop
+        #ovalGlow
       #image-wrapper.one-third.column
         span.locationTag #{ article.place}
         each url in visuals
@@ -33,7 +36,8 @@ html
         p #{article.bodyText}
       script.
         var parsedUrls = !{JSON.stringify(visuals)}
-        $('#backDrop').css('background-image', 'url(' + parsedUrls[0] + ')');
+        //- $('#scatterPlot').css('background-image', 'url(' + parsedUrls[0] + ')');
 
-    
+      script(type='text/javascript', src='/scripts/project.js')
+
     
